Fixes and player aligning

--- a/src/index.css
+++ b/src/index.css
@@ -32,13 +32,14 @@ header {
   border-radius: 5px;
   min-width: 9em;
   vertical-align: middle;
-  min-height: 4em;
+  min-height: 6.5em;
+  max-height: 6.5em;
   overflow: hidden;
+  height: 100%;
 }
 
 .chip-level {
   border-bottom: solid black 1px;
-  padding: 3px;
   text-align: center;
 }
 
@@ -68,14 +69,20 @@ header {
 }
 
 .chip-player {
-  min-height: 1.3em;
   text-align: center;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
   height: 100%;
-  justify-content: center;
-  min-height: inherit;
+}
+
+.chip-player-1 {
+    padding: 1.8em 0 1.8em;
+}
+
+.chip-player-2 {
+    padding: 1.4em 0 1.4em 0;
+}
+
+.chip-player-3 {
+    padding: .7em 0 .7em 0;
 }
 
 .player {
